[package]
name = "pipe-marker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
signal-hook = "0.3.17"

[dev-dependencies]
assert_cmd = "2.0.14"
nix = { version = "0.29.0", features = ["process", "signal"] }
